fixed empty space below footer on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1790,11 +1790,15 @@ input, select, textarea {
 	}
 
 	@media screen and (max-width: 736px) {
+		#wrapper {
+			overflow-y: none;
+		}
+
 		#header {
-			margin-bottom: -30px;
+			margin-bottom: -50px;
 		}
 
 		#footer {
-			margin-bottom: 70px;
+			margin-bottom: 90px;
 		}
 	}
